2011-07-14  Adam Barth  <abarth@webkit.org>

        Fix Python exception blocking the commit-queue.

        * Scripts/webkitpy/common/checkout/scm/git.py:

2011-07-13  Eric Seidel  <eric@webkit.org>

        Move webkitpy off of loose mocks
        https://bugs.webkit.org/show_bug.cgi?id=64508

        Reviewed by Adam Barth.

        Using Mock has caused us more pain than help.
        It's possible that there was a cleaner way to use it
        (maybe Mock(class) instead of inheriting from it?).
        But for now, I've removed all uses of Mock from mocktool.py.

        I also moved run_command into the only 3 files which call it
        instead of leaving the deprecated method in executive.py.

        I changed various direct calls to os.* to use filesystem instead.

        * Scripts/webkitpy/common/checkout/checkout.py:
        * Scripts/webkitpy/common/checkout/checkout_unittest.py:
        * Scripts/webkitpy/common/checkout/scm/git.py:
        * Scripts/webkitpy/common/checkout/scm/scm.py:
        * Scripts/webkitpy/common/checkout/scm/scm_unittest.py:
        * Scripts/webkitpy/common/checkout/scm/svn.py:
        * Scripts/webkitpy/common/system/executive.py:
        * Scripts/webkitpy/common/system/executive_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:
        * Scripts/webkitpy/tool/steps/cleanworkingdirectory_unittest.py:
        * Scripts/webkitpy/tool/steps/ensurelocalcommitifneeded.py:

2011-07-13  Eric Seidel  <eric@webkit.org>

        NRWT doesn't store the svn revision in full_results.json on chromium-win
        https://bugs.webkit.org/show_bug.cgi?id=64492

        Reviewed by Adam Barth.

        Add a warning message in the revision='' case to help us diagnose
        what's going wrong on the bot.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:

2011-07-13  Dirk Pranke  <dpranke@chromium.org>

        new-run-webkit-tests: print baseline search path as part of config output